// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={43}
      createdAt={0}
      description="GUS"
      id="1"
      key="1"
      note="lalala"
    />
    <Connect(ExpenseListItem)
      amount={9943}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={188.99}
      createdAt={432000000}
      description="dentist"
      id="3"
      key="3"
      note="broken tooth"
    />
  </div>
</div>
`;
